add potential title

--- a/doc/papers/06.2014/my-report.tex
+++ b/doc/papers/06.2014/my-report.tex
@@ -18,7 +18,7 @@
 \usepackage{graphicx}
 \DeclareGraphicsExtensions{.pdf,.png,.jpg}
 
-\title{A Behavioral Analysis of Multipath TCP Traffic}
+\title{Improving OpenVPN Performance Using Multipath Link Aggregation}
 
 \author{Silviu Petria, Silviu Popescu\\
 Faculty of Automatic Control and Computers\\
