add partial results section

--- a/doc/papers/06.2014/my-report.bib
+++ b/doc/papers/06.2014/my-report.bib
@@ -1,34 +1,3 @@
-# sample entry
-@inproceedings{how-hard-can-it-be,
- author = {Raiciu, Costin and Paasch, Christoph and Barre, Sebastien and Ford, Alan and Honda, Michio and Duchene, Fabien and Bonaventure, Olivier and Handley, Mark},
- title = {How Hard Can It Be? Designing and Implementing a Deployable Multipath TCP},
- booktitle = {Proceedings of the 9th USENIX Conference on Networked Systems Design and Implementation},
- series = {NSDI'12},
- year = {2012},
- location = {San Jose, CA},
- pages = {29--29},
- numpages = {1},
- url = {http://dl.acm.org/citation.cfm?id=2228298.2228338},
- acmid = {2228338},
- publisher = {USENIX Association},
- address = {Berkeley, CA, USA},
-}
-
-@inproceedings{congestion-control,
- author = {Wischik, Damon and Raiciu, Costin and Greenhalgh, Adam and Handley, Mark},
- title = {Design, Implementation and Evaluation of Congestion Control for Multipath TCP},
- booktitle = {Proceedings of the 8th USENIX Conference on Networked Systems Design and Implementation},
- series = {NSDI'11},
- year = {2011},
- location = {Boston, MA},
- pages = {8--8},
- numpages = {1},
- url = {http://dl.acm.org/citation.cfm?id=1972457.1972468},
- acmid = {1972468},
- publisher = {USENIX Association},
- address = {Berkeley, CA, USA},
-} 
-
 @inproceedings{in-datacenters,
  author = {Raiciu, Costin and Barre, Sebastien and Pluntke, Christopher and Greenhalgh, Adam and Wischik, Damon and Handley, Mark},
  title = {Improving Datacenter Performance and Robustness with Multipath TCP},
@@ -45,44 +14,16 @@
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {data center, mptcp},
-} 
+}
 
-@inproceedings{mininet,
- author = {Lantz, Bob and Heller, Brandon and McKeown, Nick},
- title = {A Network in a Laptop: Rapid Prototyping for Software-defined Networks},
- booktitle = {Proceedings of the 9th ACM SIGCOMM Workshop on Hot Topics in Networks},
- series = {Hotnets-IX},
- year = {2010},
- isbn = {978-1-4503-0409-2},
- location = {Monterey, California},
- pages = {19:1--19:6},
- articleno = {19},
- numpages = {6},
- url = {http://doi.acm.org/10.1145/1868447.1868466},
- doi = {10.1145/1868447.1868466},
- acmid = {1868466},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {emulation, open-flow, rapid prototyping, software defined networking, virtualization},
-} 
-
-@inproceedings{mininet-reproduce,
- author = {Handigol, Nikhil and Heller, Brandon and Jeyakumar, Vimalkumar and Lantz, Bob and McKeown, Nick},
- title = {Reproducible Network Experiments Using Container-based Emulation},
- booktitle = {Proceedings of the 8th International Conference on Emerging Networking Experiments and Technologies},
- series = {CoNEXT '12},
- year = {2012},
- isbn = {978-1-4503-1775-7},
- location = {Nice, France},
- pages = {253--264},
- numpages = {12},
- url = {http://doi.acm.org/10.1145/2413176.2413206},
- doi = {10.1145/2413176.2413206},
- acmid = {2413206},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {container-based emulation, reproducible research},
-} 
+@techreport{sem1,
+ author = {Petria, Silviu and Popescu, Silviu},
+ title = {{A Behavioral Analysis of Multipath TCP Traffic}},
+ institution = {Faculty of Automatic Control and Computers, University POLITEHNICA of Bucharest},
+ address = {Splaiul Independenței 313, Bucharest, Romania, 060042},
+ month = {February},
+ year = {2014}
+}
 
 # sample URL
 @misc{openvz,
