--- a/doc/papers/06.2014/src/abstract.tex
+++ b/doc/papers/06.2014/src/abstract.tex
@@ -1,2 +1,2 @@
 % vim: set tw=78 sts=2 sw=2 ts=8 aw et ai:
-TODO
+There is a growing need for applications to be flexible with regards to network conditions and to be able to work around restrictions to provide the user with a satisfying experience. Our intention is to create a system that allows users to bypass egress firewalls using Multipath TCP (MPTCP) over OpenVPN, tunneling traffic via common protocols. After an initial analysis of how link parameters affect the performance of MPTCP, we have deployed the protocol over OpenVPN in order to understand how we can maximize throughput using system and network configurations. This paper summarizes our findings.
