add introduction for real

--- a/doc/papers/06.2014/src/introduction.tex
+++ b/doc/papers/06.2014/src/introduction.tex
@@ -1,4 +1,4 @@
 % vim: set tw=78 sts=2 sw=2 ts=8 aw et ai:
-Our previous report \cite{sem1} focused on the effect of TCP link configs over MPTCP. We found that while MPTCP's congestion window algorithm performs very well, the throughput is very much influenced by the size of the receive buffer, which must be correlated with the bandwidth-delay product. We have built on those findings and incorporated them into a new test environment, looking to understand how MPTCP combined throughput is affected when running over OpenVPN tunnels, both UDP and TCP.
+Our previous report \cite{sem1} focused on the effect of TCP link configurations over MPTCP. We found that while MPTCP's congestion window algorithm performs very well, the throughput is very much influenced by the size of the receive buffer, which must be correlated with the bandwidth-delay product. We have built on those findings and incorporated them into a new test environment, looking to understand how MPTCP combined throughput is affected when running over OpenVPN tunnels, both UDP and TCP.
 
 OpenVPN is a popular lightweight open source SSL VPN solution that provides a wide range of functionalities including remote access and site-to-site VPNs, together with extensive link security and client authentication capabilities. We have chosen it due to its ubiquity, ease to use and detailed documentation.
