remove related work, add tuning section

--- a/doc/papers/06.2014/my-report.tex
+++ b/doc/papers/06.2014/my-report.tex
@@ -40,11 +40,9 @@ Splaiul Independenței 313, Bucharest, Romania, 060042 \\
 \label{sec:introduction}
 \input{src/introduction}
 
-\section{Related Work}
-\label{sec:related}
-\input{src/related}
-
-% should we have another section here?
+\section{Fine tuning the Linux networking stack}
+\label{sec:tuning}
+\input{src/tuning}
 
 \section{Scenarios and Results}
 \label{sec:results}
