--- a/doc/papers/06.2014/my-report.bib
+++ b/doc/papers/06.2014/my-report.bib
@@ -16,6 +16,30 @@
  keywords = {data center, mptcp},
 }
 
+@inproceedings{olia,
+  title={MPTCP is not pareto-optimal: performance issues and a possible solution},
+  author={Khalili, Ramin and Gast, Nicolas and Popovic, Miroslav and Upadhyay, Utkarsh and Le Boudec, Jean-Yves},
+  booktitle={Proceedings of the 8th international conference on Emerging networking experiments and technologies},
+  pages={1--12},
+  year={2012},
+  organization={ACM}
+}
+
+@inproceedings{how-hard-can-it-be,
+ author = {Raiciu, Costin and Paasch, Christoph and Barre, Sebastien and Ford, Alan and Honda, Michio and Duchene, Fabien and Bonaventure, Olivier and Handley, Mark},
+ title = {How Hard Can It Be? Designing and Implementing a Deployable Multipath TCP},
+ booktitle = {Proceedings of the 9th USENIX Conference on Networked Systems Design and Implementation},
+ series = {NSDI'12},
+ year = {2012},
+ location = {San Jose, CA},
+ pages = {29--29},
+ numpages = {1},
+ url = {http://dl.acm.org/citation.cfm?id=2228298.2228338},
+ acmid = {2228338},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+}
+
 @techreport{sem1,
  author = {Petria, Silviu and Popescu, Silviu},
  title = {{A Behavioral Analysis of Multipath TCP Traffic}},
