update references titles

--- a/doc/papers/06.2014/my-report.bib
+++ b/doc/papers/06.2014/my-report.bib
@@ -1,6 +1,6 @@
 @inproceedings{in-datacenters,
  author = {Raiciu, Costin and Barre, Sebastien and Pluntke, Christopher and Greenhalgh, Adam and Wischik, Damon and Handley, Mark},
- title = {Improving Datacenter Performance and Robustness with Multipath TCP},
+ title = {{Improving Datacenter Performance and Robustness with Multipath TCP}},
  booktitle = {Proceedings of the ACM SIGCOMM 2011 Conference},
  series = {SIGCOMM '11},
  year = {2011},
@@ -17,7 +17,7 @@
 }
 
 @inproceedings{olia,
-  title={MPTCP is not pareto-optimal: performance issues and a possible solution},
+  title={{MPTCP is not pareto-optimal: performance issues and a possible solution}},
   author={Khalili, Ramin and Gast, Nicolas and Popovic, Miroslav and Upadhyay, Utkarsh and Le Boudec, Jean-Yves},
   booktitle={Proceedings of the 8th international conference on Emerging networking experiments and technologies},
   pages={1--12},
@@ -27,7 +27,7 @@
 
 @inproceedings{how-hard-can-it-be,
  author = {Raiciu, Costin and Paasch, Christoph and Barre, Sebastien and Ford, Alan and Honda, Michio and Duchene, Fabien and Bonaventure, Olivier and Handley, Mark},
- title = {How Hard Can It Be? Designing and Implementing a Deployable Multipath TCP},
+ title = {{How Hard Can It Be? Designing and Implementing a Deployable Multipath TCP}},
  booktitle = {Proceedings of the 9th USENIX Conference on Networked Systems Design and Implementation},
  series = {NSDI'12},
  year = {2012},
