--- a/doc/slides/06.2014/en/slides.tex
+++ b/doc/slides/06.2014/en/slides.tex
@@ -139,6 +139,12 @@ Silviu-Mihai\\
 
 \section{Conclusions}
 \begin{frame}{Conclusions and Further Work}
+\begin{itemize}
+    \item MPTCP is able to move traffic depending on congestion
+    \item best results achieved when socket buffer is twice the BDP
+    \item reduce amount of virtualization
+    \item dynamically create tunnels based on available protocols
+  \end{itemize}
 \end{frame}
 
 \end{document}
