finish 2nd term slides

--- a/doc/slides/06.2014/en/slides.tex
+++ b/doc/slides/06.2014/en/slides.tex
@@ -110,6 +110,9 @@ Silviu-Mihai\\
 
 \section{Results}
 \begin{frame}{Testbed}
+  \begin{figure}
+    \includegraphics[scale=0.37]{img/mptcp-openvpn}
+  \end{figure}
 \end{frame}
 
 \begin{frame}{Single UDP tunnel}
