--- a/doc/slides/06.2014/en/slides.tex
+++ b/doc/slides/06.2014/en/slides.tex
@@ -53,8 +53,8 @@ Aggregation]{Improving OpenVPN Performance Using Multipath Link Aggregation}
 \subtitle{Master Report Session -- June 2014}
 \institute{Faculty of Automatic Control and Computers,\\
 	University POLITEHNICA of Bucharest}
-\author[Petria Silviu, Popescu Silviu-Mihai]{Petria Silviu, Popescu
-Silviu-Mihai\\
+\author[Silviu Petria, Silviu-Mihai Popescu]{Silviu Petria, Silviu-Mihai
+Popescu\\
 	Supervisor: Costin Raiciu}
 \date{June 11, 2014}
 
