Detail testbed changes and previous work

--- a/doc/papers/02.2015/my-report.bib
+++ b/doc/papers/02.2015/my-report.bib
@@ -49,6 +49,15 @@
  year = {2014}
 }
 
+@techreport{sem2,
+ author = {Petria, Silviu and Popescu, Silviu},
+ title = {{Improving OpenVPN Performance Using Multipath Link Aggregation}},
+ institution = {Faculty of Automatic Control and Computers, University POLITEHNICA of Bucharest},
+ address = {Splaiul Independenței 313, Bucharest, Romania, 060042},
+ month = {June},
+ year = {2014}
+}
+
 # sample URL
 @misc{openvz,
 	howpublished = {{http://wiki.openvz.org/}},
