Add citation for latencies

--- a/doc/papers/02.2015/my-report.bib
+++ b/doc/papers/02.2015/my-report.bib
@@ -40,6 +40,24 @@
  address = {Berkeley, CA, USA},
 }
 
+@inproceedings{latencies,
+ author = {Sommers, Joel and Barford, Paul},
+ title = {Cell vs. WiFi: On the Performance of Metro Area Mobile Connections},
+ booktitle = {Proceedings of the 2012 ACM Conference on Internet Measurement Conference},
+ series = {IMC '12},
+ year = {2012},
+ isbn = {978-1-4503-1705-4},
+ location = {Boston, Massachusetts, USA},
+ pages = {301--314},
+ numpages = {14},
+ url = {http://doi.acm.org/10.1145/2398776.2398808},
+ doi = {10.1145/2398776.2398808},
+ acmid = {2398808},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {WiFi, cellular},
+} 
+
 @techreport{sem1,
  author = {Petria, Silviu and Popescu, Silviu},
  title = {{A Behavioral Analysis of Multipath TCP Traffic}},
