add wVegas reference

--- a/doc/papers/02.2015/my-report.bib
+++ b/doc/papers/02.2015/my-report.bib
@@ -76,6 +76,23 @@
  year = {2014}
 }
 
+@inproceedings{wvegas,
+ author = {Yu Cao and Mingwei Xu and Xiaoming Fu},
+ title = {Delay-based Congestion Control for Multipath TCP},
+ booktitle = {Proceedings of the 2012 20th IEEE International Conference on Network Protocols (ICNP)},
+ series = {ICNP '12},
+ year = {2012},
+ isbn = {978-1-4673-2445-8},
+ pages = {1--10},
+ numpages = {10},
+ url = {http://dx.doi.org/10.1109/ICNP.2012.6459978},
+ doi = {10.1109/ICNP.2012.6459978},
+ acmid = {2472505},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+ keywords = {Robustness},
+} 
+
 # sample URL
 @misc{openvz,
 	howpublished = {{http://wiki.openvz.org/}},
