--- a/doc/papers/02.2015/my-report.tex
+++ b/doc/papers/02.2015/my-report.tex
@@ -40,9 +40,9 @@ Splaiul Independenței 313, Bucharest, Romania, 060042 \\
 \label{sec:introduction}
 \input{src/introduction}
 
-\section{Previous Work}
-\label{sec:previous}
-\input{src/previous}
+\section{Context}
+\label{sec:context}
+\input{src/context}
 
 \section{Scenarios and Results}
 \label{sec:results}
