--- a/doc/papers/02.2015/src/context.tex
+++ b/doc/papers/02.2015/src/context.tex
@@ -1,7 +1,7 @@
 % vim: set tw=78 sts=2 sw=2 ts=8 aw et ai:
 \subsection{Opportunistic Linked Increases Algorithm - OLIA}
 \subsection{Weighted Vegas - wVegas}
-\subsection{Improved Testbe}
+\subsection{Improved Testbed}
 The amount of virtualization in our previous testbed incurred significant overhead which we believe affected performance. We used a Ubuntu 12.04 virtual machine with software defined networking framework Mininet. Inside Mininet we defined two hosts with an Ethernet link between them. OpenVPN tunnels were created over the link. While Mininet offered useful features for link control and topology definition, the additional layer created by its process-based virtualization proved problematic.
 
 For this stage we have completely revamped our testing environment, outlined
