Add wVegas subsection

--- a/doc/papers/02.2015/src/context.tex
+++ b/doc/papers/02.2015/src/context.tex
@@ -1,6 +1,8 @@
 % vim: set tw=78 sts=2 sw=2 ts=8 aw et ai:
 \subsection{Opportunistic Linked Increases Algorithm - OLIA}
 \subsection{Weighted Vegas - wVegas}
+Weighted Vegas (wVegas) is a delay-based congestion control algorithm for MPTCP which achieves fine-grained load balancing by using packet queuing delay as a congestion signal \cite{wvegas}. Linked Increases algorithms such as LIA and OLIA use packet loss as a sign of congestion and will only shift packets between paths after the loss event has been detected. In practice, they are reactive algorithms and only provide an estimation of the extent of congestion. The creators of wVegas argue that traffic should be shifted as early as possible, before losses occur. Therefore they propose an approach based on what they define as the Congestion Equality Principle: "if every flow strives to equalize the extent of congestion that it perceives on all its available paths by means of shifting traffic, then network resources will be fairly and efficiently shared by all the flows" \cite{wvegas}.
+The implementation of wVegas is based on TCP-Vegas. During the congestion avoidance phase, the congestion window is increased or decreased based on the average RTT in the previous round of congestion avoidance and the minimal RTT recorded so far. The subflow weight adjustment algorithm of wVegas manages to achieve good convergence and timely traffic shifting.
 \subsection{Improved Testbed}
 The amount of virtualization in our previous testbed incurred significant overhead which we believe affected performance. We used a Ubuntu 12.04 virtual machine with software defined networking framework Mininet. Inside Mininet we defined two hosts with an Ethernet link between them. OpenVPN tunnels were created over the link. While Mininet offered useful features for link control and topology definition, the additional layer created by its process-based virtualization proved problematic.
 
